--- a/CarpoolManagment/ClientApp/package.json
+++ b/CarpoolManagment/ClientApp/package.json
@@ -11,9 +11,11 @@
     "react": "^16.0.0",
     "react-datepicker": "^4.5.0",
     "react-dom": "^16.0.0",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4",
+    "react-select": "^5.2.1",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2"
   },
